--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
-    "sonner": "^2.0.5",
-    "swr": "^2.3.3"
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
